--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,30 +1,29 @@
-# Set base image
-FROM node:16-alpine3.16
+# Use Node.js 16 Alpine image for the build stage
+FROM node:16-alpine AS build
 
-# Set the working directory
-WORKDIR /backend
+# Set the working directory inside the container
+WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json to the container
+# Copy package.json and package-lock.json first to leverage Docker cache
 COPY package*.json ./
 
-# Install dependencies and clears the npm cache and removes any temporary files
-RUN npm install --only=production && \
-    npm cache clean --force && \
-    rm -rf /tmp/*
+# Install application dependencies (production and dev dependencies for build)
+RUN npm install
 
 # Copy the rest of the application code
 COPY . .
 
-# Set the environment variable for the app
-ENV NODE_ENV=production
+# Create a minimal runtime image based on Alpine
+FROM node:16-alpine
 
-# Expose the port used by the app
+# Set the working directory in the final image
+WORKDIR /app
+
+# Copy only the necessary files from the build stage (dependencies + code)
+COPY --from=build /usr/src/app /app
+
+# Expose the port the app will run on
 EXPOSE 5000
 
-# Prune the node_modules directory to remove development dependencies and clears the npm cache and removes any temporary files
-RUN npm prune --production && \
-    npm cache clean --force && \
-    rm -rf /tmp/*
-
-# Start the application
-CMD ["npm", "start"]
+# Define the default command to run the app
+CMD ["node", "server.js"]
